--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.71.0",
+    "antd": "^5.24.5",
     "axios": "^1.8.4",
     "lucide-react": "^0.484.0",
     "react": "^19.0.0",
